fix(line-numbers): Fix .line-numbers not  fitting properly or stretching fully when <code> overflows

--- a/app/scss/line-numbers.scss
+++ b/app/scss/line-numbers.scss
@@ -1,38 +1,48 @@
+$grid-color: #999 !default;
+$padding-left: 3.8em !default;
+$padding-right: 0.8em !default;
+$number-width: 3em !default;
+$border-left: 5px solid #558abb !default;
+
 .line-numbers {
-	position: relative;
-	padding-left: 3.8em;
-	border-left: 5px solid #558abb;
-	max-width: 60%;
-	width: fit-content;
-	padding-right: 1em;
+	padding-left: $padding-left;
+	border-left: $border-left;
 	overflow: auto;
+	display: flex;
+	box-shadow: inset 0 0 1px #101010;
+	
+	> code {
+		position: relative;
+		padding-right: 1em;
+		flex-grow: 1;
+	}
 
 	&__row {
 		position: absolute;
 		pointer-events: none;
 		top: 0;
-		left: 0;
-		width: 100%;
+		left: -$padding-left;
+		right: 0;
 		letter-spacing: -1px;
-
-		/* border-right: 1px solid #999; */
 		user-select: none;
 		counter-reset: linenumber;
+
+		/* box-shadow: inset 0 0 1px $grid-color; */
 
 		> span {
 			pointer-events: none;
 			display: block;
 			counter-increment: linenumber;
-			box-shadow: 0 1px 1px #999;
+			box-shadow: 0 1px 0 transparentize($grid-color, .5);
 
 			&::before {
 				content: counter(linenumber);
-				color: #999;
+				color: $grid-color;
 				display: block;
-				padding-right: .8em;
+				padding-right: $padding-right;
 				text-align: right;
-				width: 3em;
-				border-right: 1px solid #999;
+				width: $number-width;
+				border-right: 1px solid $grid-color;
 			}
 		}
 	}
