--- a/app/scss/markdown.scss
+++ b/app/scss/markdown.scss
@@ -21,7 +21,7 @@
 	}
 
 	pre {
-		
+		margin: 1em 0 1em 1em;
 	}
 	
 	hr:last-child {
